Bug 253389 - Obsolete quickHelp text in kdebase/apps/konqueror/settings/kio/smbrodlg.cpp
Summary: Obsolete quickHelp text in kdebase/apps/konqueror/settings/kio/smbrodlg.cpp
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_samba (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Konqueror Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-10-06 14:23 UTC by Burkhard Lück
Modified: 2017-03-19 20:00 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Burkhard Lück 2010-10-06 14:23:41 UTC
Version:           unspecified (using Devel) 
OS:                Linux

The "Windows Shares" settingsmodule (kcmshell4 smb) has an obsolete quickHelp text:
"<p><h1>Windows Shares</h1>Konqueror ... fill in "
"the <em>Browse server</em> field.
...
"The <em>Broadcast address</em> and <em>WINS address</em> fields ..."

There are no fields named Browse server, Broadcast address, WINS address in the dialog.

Reproducible: Always
Comment 1 Luigi Toscano 2017-03-19 20:00:02 UTC
Git commit 1693ee7a250128f7fbb3fd3b040d0e2273b11f3b by Luigi Toscano.
Committed on 19/03/2017 at 19:59.
Pushed by ltoscano into branch 'master'.

User messages cleanup (and de-emphasize Konqueror)

Summary:
- more highlight on "applications that use a certain KIO", Konqueror
  is "just" an example of such applications;
- specify KIO in addition to Konqueror in the user agent;
- remove few possible references to KDE-as-the-destkop;
- general cleanup of various user messages (configuration
  modules headlines, help messages);
- fix the HTML tag inside quickHelp() messages (move <h1>
  outside <p>);
- remove the reference to contents which has not be available for
  a long time into the kcms_smb (which should probably be moved
  under kio-extras with kio_smb).

Some of the kio_http references can be slightly less clear than
before, but KIO for sure can be used without Konqueror, so this
is a step forward.

Test Plan: Compiles, the updated strings are used.

Reviewers: dfaure

Reviewed By: dfaure

Subscribers: aacid, lueck, #frameworks

Tags: #frameworks

Differential Revision: https://phabricator.kde.org/D5090

M  +2    -0    src/core/kprotocolmanager.cpp
M  +1    -1    src/kcms/kio/cache.cpp
M  +5    -5    src/kcms/kio/kcookiesmain.cpp
M  +2    -2    src/kcms/kio/kcookiespolicies.cpp
M  +1    -1    src/kcms/kio/smb.desktop
M  +4    -15   src/kcms/kio/smbrodlg.cpp
M  +1    -1    src/kcms/kio/useragent.desktop
M  +5    -4    src/kcms/kio/useragentdlg.cpp

https://commits.kde.org/kio/1693ee7a250128f7fbb3fd3b040d0e2273b11f3b