User messages cleanup (and de-emphasize Konqueror)

Summary:
- more highlight on "applications that use a certain KIO", Konqueror
  is "just" an example of such applications;
- specify KIO in addition to Konqueror in the user agent;
- remove few possible references to KDE-as-the-destkop;
- general cleanup of various user messages (configuration
  modules headlines, help messages);
- fix the HTML tag inside quickHelp() messages (move <h1>
  outside <p>);
- remove the reference to contents which has not be available for
  a long time into the kcms_smb (which should probably be moved
  under kio-extras with kio_smb).

Some of the kio_http references can be slightly less clear than
before, but KIO for sure can be used without Konqueror, so this
is a step forward.

BUG: 253389

Test Plan: Compiles, the updated strings are used.

Reviewers: dfaure

Reviewed By: dfaure

Subscribers: aacid, lueck, #frameworks

Tags: #frameworks

Differential Revision: https://phabricator.kde.org/D5090