src/kcms/kio/smbrodlg.cpp
@@ -173,21 +173,10 @@ void SMBRoOptions::changed()
 
 QString SMBRoOptions::quickHelp() const
 {
-   return i18n("<p><h1>Windows Shares</h1>Konqueror is able to access shared "
-        "Microsoft Windows file systems, if properly configured. If there is a "
-        "specific computer from which you want to browse, fill in "
-        "the <em>Browse server</em> field. This is mandatory if you "
-        "are not running Samba locally. The <em>Broadcast address</em> "
-        "and <em>WINS address</em> fields will also be available, if you "
-        "use the native code, or the location of the 'smb.conf' file "
-        "from which the options are read, when using Samba. In any case, the "
-        "broadcast address (interfaces in smb.conf) must be set up if it "
-        "is guessed incorrectly or you have multiple cards. A WINS server "
-        "usually improves performance, and reduces the network load a lot.</p><p>"
-        "The bindings are used to assign a default user for a given server, "
-        "possibly with the corresponding password, or for accessing specific "
-        "shares. If you choose to, new bindings will be created for logins and "
-        "shares accessed during browsing. You can edit all of them from here. "
+   return i18n("<h1>Windows Shares</h1><p>Applications using the "
+        "SMB kioslave (like Konqueror) are able to access shared Microsoft "
+        "Windows file systems, if properly configured.</p><p>You can specify "
+        "here the credentils used to access the shared resources. "
         "Passwords will be stored locally, and scrambled so as to render them "
         "unreadable to the human eye. For security reasons, you may not want to "
         "do that, as entries with passwords are clearly indicated as such.</p>");
